# AnonXMusic

./: ,buildpacks  .buildpacks  .dockerignore  .gitignore  Champu.Xml  Dockerfile  Fly.io  Internal  LICENSE  Procfile  README.md  ZorroMusic  app.json  autoplay.py  config.py  config.pyparindaa  config.pyy  cookies.txt  en (1).yml  fly.toml  genstring.py  heroku.yml  hh.txt  indo.yml  okteto.yml  package.json  pepek.txt  push  pyproject.toml  requirements.txt  runtime.txt  sample.env  setup  start  web.py  wed.py
.github/: CODEOWNERS  OFL_Inter.txt  OFL_Raleway.txt  README.md
.github/workflows/: PyLint.yml
AnonX/: __init__.py  __main__.py  logging.py  misc.py
AnonX/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
AnonX/plugins/: __init__.py  auth.py  autoleave.py  blacklistchat.py  callback.py  cleanmode.py  dev.py  gitinfo.py  help.py  heroku.py  inline.py  languages.py  live.py  logger.py  loop.py  lyrics.py  maintenance.py  mute.py  pause.py  ping.py  play.py  playlist.py  queue.py  resume.py  seeker.py  settings.py  skip.py  songs.py  speedtest.py  start.py  stats.py  stop.py  sudoers.py  unmute.py  vars.py
AnonX/utils/: __init__.py  channelplay.py  errors.py  exceptions.py  formatters.py  inlinequery.py  logger.py  pastebin.py  sys.py  thumbnails.py
AnonXMusic/: __init__.py  __main__.py  logging.py  misc.py
AnonXMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
AnonXMusic/utils/: sys.py  (+8 more)
anony/: __init__.py  __main__.py
config/: config.py
cookies/: README.md  cookies.txt
strings/: __init__.py  command.yml  helpers.py
(+182 files in other folders)
